updated responsive buttons(sub and see more)

--- a/style.css
+++ b/style.css
@@ -610,7 +610,15 @@ nav .fa-solid {
     
     
   }
+  .btn.btn3 {
+    margin-left: 12%;
+  }
 
+  .btn.btn4 {
+    margin-left: 19%;
+  }
+  
+  
 }
 
 
