--- a/style.css
+++ b/style.css
@@ -615,7 +615,6 @@ nav .fa-solid {
     margin-left: 12%;
   }
 
-<<<<<<< HEAD
   .btn.btn3 {
     margin-left: 12%;
   }
@@ -624,13 +623,6 @@ nav .fa-solid {
     margin-left: 19%;
   }
 
-=======
-  .btn.btn4 {
-    margin-left: 19%;
-  }
-  
-  
->>>>>>> origin/main
 }
 
 
@@ -722,7 +714,7 @@ nav .fa-solid {
 .bang {
   display: flex;
   justify-content: center;
-  color: #ff004f;
+  color: #ffafcc;
   font-family: 'Palanquin Dark', sans-serif;
   text-shadow: 3px 4px 9px rgba(0, 0, 0, 0.63);
   text-shadow: rgb(0, 0, 0) 1px 0px 0px, rgb(0, 0, 0) 0.540302px 0.841471px 0px,
@@ -731,6 +723,22 @@ nav .fa-solid {
     rgb(0, 0, 0) -0.653644px -0.756803px 0px,
     rgb(0, 0, 0) 0.283662px -0.958924px 0px,
     rgb(0, 0, 0) 0.96017px -0.279416px 0px;
+}
+
+.bang-icon{
+  display: flex;
+  justify-content: center;
+  color: rgb(255, 102, 0);
+  font-family: 'Palanquin Dark', sans-serif;
+  text-shadow: 3px 4px 9px rgba(0, 0, 0, 0.63);
+  /* text-shadow: rgb(0, 0, 0) 1px 0px 0px, rgb(0, 0, 0) 0.540302px 0.841471px 0px,
+    rgb(0, 0, 0) -0.416147px 0.909297px 0px,
+    rgb(0, 0, 0) -0.989993px 0.14112px 0px,
+    rgb(0, 0, 0) -0.653644px -0.756803px 0px,
+    rgb(0, 0, 0) 0.283662px -0.958924px 0px,
+    rgb(0, 0, 0) 0.96017px -0.279416px 0px; */
+  /* text-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75); */
+
 }
 
 .projs {
